--- a/style.css
+++ b/style.css
@@ -4,3 +4,21 @@ body {
   padding: 25px;
   font-family: sans-serif;
 }
+
+a {
+    color: blue;
+    text-decoration: none;
+
+a:hover {
+    color: darkblue;
+    text-decoration: underline;
+}
+
+a:visited {
+    color: purple;
+}body {
+  background: white;
+  color: black;
+  padding: 25px;
+  font-family: sans-serif;
+}
