--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
 header nav ul {
   list-style-type: none;
   display: flex;
-  justify-content: center;
+  justify-content: right;
 }
 
 header nav ul li {
@@ -95,6 +95,7 @@ button {
   color: #fff;
   border: none;
   padding: 10px 20px;
+  margin-bottom: 10px;
   font-size: 16px;
   border-radius: 5px;
   cursor: pointer;
