--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 1.6;
   background-color: #f4f4f4;
   color: #333;
@@ -61,6 +61,8 @@ main section {
 
 main h1, main h2, main h4 {
   color: #6a1b9a;
+  font-family: 'Montserrat', sans-serif;
+
 }
 
 main p, main ul, main a {
