--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
 header nav ul {
   list-style-type: none;
   display: flex;
-  justify-content: center;
+  justify-content: right;
 }
 
 header nav ul li {
