--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #f5f5f5;
   color: #333;
   scroll-behavior: smooth;
-  padding: 0 10px;
+  padding: 0 px;
 }
 
 header {
