--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #d4a5d6;
+  background-color: #ff69b4;
   color: #fff;
   padding: 20px 0;
   text-align: center;
@@ -46,7 +46,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background-color: #ce93d8;
+  background-color: #ff85c2;
   transform: scale(1.05);
 }
 
@@ -63,7 +63,7 @@ main section {
 }
 
 main h1, main h2, main h4 {
-  color: #d4a5d6;
+  color: #ff69b4;
   font-family: 'Montserrat', sans-serif;
   padding: 10px;
 }
@@ -81,13 +81,13 @@ main ul, main p, main a {
 }
 
 main a {
-  color: #d4a5d6; 
+  color: #ff69b4; 
   text-decoration: none;
   transition: color 0.3s ease;
 }
 
 main a:hover {
-  color: #ce93d8;
+  color: #ff85c2;
 }
 
 main img {
@@ -103,8 +103,9 @@ main ul {
   padding-left: 50px;
 }
 
+/* Button Styles */
 button {
-  background-color: #d4a5d6; 
+  background-color: #ff69b4; 
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -116,7 +117,7 @@ button {
 }
 
 button:hover {
-  background-color: #ce93d8;
+  background-color: #ff85c2;
   transform: scale(1.05);
 }
 
