--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #ff69b4;
+  background-color: #D8BFD8;
   color: #fff;
   padding: 20px 0;
   text-align: center;
@@ -46,7 +46,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background-color: #ff85c2;
+  background-color: #D8BFD8;
   transform: scale(1.05);
 }
 
@@ -55,15 +55,15 @@ main {
   padding: 20px;
   max-width: 800px;
   margin: auto;
-  padding-top: 100px; 
+  padding-top: 100px;
 }
 
 main section {
-  padding: 60px 20px; 
+  padding: 60px 20px;
 }
 
 main h1, main h2, main h4 {
-  color: #ff69b4;
+  color: #D8BFD8;
   font-family: 'Montserrat', sans-serif;
   padding: 10px;
 }
@@ -81,7 +81,7 @@ main ul, main p, main a {
 }
 
 main a {
-  color: #ff69b4; 
+  color: #D8BFD8;
   text-decoration: none;
   transition: color 0.3s ease;
 }
@@ -105,7 +105,7 @@ main ul {
 
 /* Button Styles */
 button {
-  background-color: #ff69b4; 
+  background-color: #D8BFD8;
   color: #fff;
   border: none;
   padding: 10px 20px;
