--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Header Styles */
 header {
-  background-color: #D8BFD8;
+  background-color: #CC33FF;
   color: #fff;
   padding: 20px 0;
   text-align: center;
@@ -46,7 +46,7 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-  background-color: #D8BFD8;
+  background-color: #CC33FF;
   transform: scale(1.05);
 }
 
@@ -63,7 +63,7 @@ main section {
 }
 
 main h1, main h2, main h4 {
-  color: #D8BFD8;
+  color: #CC33FF;
   font-family: 'Montserrat', sans-serif;
   padding: 10px;
 }
@@ -81,7 +81,7 @@ main ul, main p, main a {
 }
 
 main a {
-  color: #D8BFD8;
+  color: #CC33FF;
   text-decoration: none;
   transition: color 0.3s ease;
 }
@@ -105,7 +105,7 @@ main ul {
 
 /* Button Styles */
 button {
-  background-color: #D8BFD8;
+  background-color: #CC33FF;
   color: #fff;
   border: none;
   padding: 10px 20px;
